// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OpportunitySaveUserControl matches snapshot (saved button) 1`] = `
<div>
  <button
    class="usa-button usa-button usa-button--outline"
    data-open-modal="true"
    data-testid="button"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="usa-icon button-icon-large"
      role="img"
    >
      <use
        href="/img.jpg#star_outline"
      />
    </svg>
    saveButton.save
  </button>
</div>
`;

exports[`OpportunitySaveUserControl matches snapshot (saved icon) 1`] = `
<div>
  <button
    class="usa-button usa-button--unstyled"
    data-open-modal="true"
    data-testid="button"
    id="save-search-result-saved-id"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="usa-icon button-icon-large"
      role="img"
    >
      <use
        href="/img.jpg#star_outline"
      />
    </svg>
  </button>
</div>
`;

exports[`OpportunitySaveUserControl matches snapshot (unsaved button) 1`] = `
<div>
  <button
    class="usa-button usa-button--unstyled"
    data-open-modal="true"
    data-testid="button"
    id="save-search-result-saved-id"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="usa-icon button-icon-large"
      role="img"
    >
      <use
        href="/img.jpg#star_outline"
      />
    </svg>
  </button>
</div>
`;

exports[`OpportunitySaveUserControl matches snapshot (unsaved icon) 1`] = `
<div>
  <button
    class="usa-button usa-button--unstyled"
    data-open-modal="true"
    data-testid="button"
    id="save-search-result-saved-id"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="usa-icon button-icon-large"
      role="img"
    >
      <use
        href="/img.jpg#star_outline"
      />
    </svg>
  </button>
</div>
`;
